# MaCh3_DUNE

./: .gitignore  .yamllint  BinVals.c  CMakeLists.txt  CMakeLists_old.txt  HistOverlap.c  ListOfKinematics.md  MCJob.sh  MaCh3DUNEFactory_8cpp.html  MaCh3DUNEFactory_8cpp__incl.map  MaCh3DUNEFactory_8cpp__incl.md5  MaCh3DUNEFactory_8cpp_source.html  MaCh3DUNEFactory_8h.html  MaCh3DUNEFactory_8h__incl.map  MaCh3DUNEFactory_8h__incl.md5  MaCh3DUNEFactory_8h_source.html  ParamGenerator.py  ParamProbCol.c  README.md  README_8md.html  StructsDUNE_8h.html  StructsDUNE_8h__dep__incl.map  StructsDUNE_8h__dep__incl.md5  StructsDUNE_8h__incl.map  StructsDUNE_8h_source.html  annotated.html  classes.html  classsamplePDFDUNEAtm-members.html  classsamplePDFDUNEAtm.html  classsamplePDFDUNEAtm__coll__graph.map  classsamplePDFDUNEAtm__coll__graph.md5  classsamplePDFDUNEBeamFD-members.html  classsamplePDFDUNEBeamFD.html  classsamplePDFDUNEBeamFD__coll__graph.map  classsamplePDFDUNEBeamFD__coll__graph.md5  classsamplePDFDUNEBeamND-members.html  classsamplePDFDUNEBeamND.html  classsamplePDFDUNEBeamNDGAr-members.html  classsamplePDFDUNEBeamNDGAr.html  classsamplePDFDUNEBeamNDGAr__coll__graph.map  (+146 more)
.github/: dependabot.yml  pr-title-checker-config.json  pull_request_template.md
Apps/: Abi_Posteriorpredicitive.cpp  Abi_Posteriorpredicitiveold.cpp  Abi_Posteriorpredictive_fardetector.cpp  Abi_Posteriorpredictive_withosc.cpp  CMakeLists.txt  Compare_onaxis_vs_offaxis.cpp  Compare_runplans.cpp  ConvertToEigen.cpp  DataRates.cpp  EventRates.cpp  EventRates_New.cpp  EventRates_choosingbinning.cpp  Extract_xsec_fromyaml.cpp  Fit.cpp  Fit_Abi.cpp  Fit_fixingparameters_beluga.cpp  Fit_fixingparameters_beluga_withthrows.cpp  Fit_fixingparameters_somefixed.cpp  GetHessianMatrix.cpp  LikelihoodScan.cpp  Likelihood_Scan_abi.cpp  MakeCovarianceMatrix.cpp  MakeCovarianceMatrix_compressed.cpp  MatrixPlotter.cpp  ParamUpdateAndSave.cpp  Plot_xsec_from_yaml.cpp  PostPredDUNE.cpp  Post_xsec_diagnostics_withcorr.cpp  Post_xsec_diagnostics_withcorr_fd.cpp  PosteriorPedictive.cpp  Posteriorpreditctive_fd.cpp  Postfit_xsec_diagnostics.cpp  Postfit_xsec_diagnostics_withcorr.cpp  Postfit_xsec_diagnostics_withcorr_comparisons.cpp  Postfit_xsec_diagnosticsold.cpp  Postprod_SK.cpp  PredictivePDSP.cpp  Predictives.cpp  Projections.cpp  SigmaVarTutorial.cpp  (+3 more)
Apps/AbiP/Analysis/: EventRates.cpp  Fit_fakedata.cpp
Apps/AbiP/Plotting/: CMakeLists.txt  Compare_runplans.cpp  Post_xsec_2D.cpp  Post_xsec_diagnostics_withcorr.cpp  PosteriorPredictive.cpp  PosteriorPredictive_forFD.cpp  PosteriorPredictive_forND.cpp
Apps/AbiP/deprecated/: Compare_onaxis_vs_offaxis.cpp  DUNE_posteriorpredictive_fromSK.cpp  Fit_fixingparameters.cpp  Fit_fixingparameters_beluga_withthrowsold.cpp  Fit_fixingparameters_new.cpp  Post_xsec_diagnostics_withcorr_fd.cpp  Postfit_xsec_diagnostics.cpp  Postfit_xsec_diagnostics_withcorrold.cpp  Postprod_SK.cpp
CIValidations/: CMakeLists.txt  README.md
Configs/: 12m_otherfiles.yaml  DiagnosticConfig.yaml  EventRates_1D.yaml  EventRates_Adaptive.yaml  EventRates_Adaptive_job.yaml  EventRates_Adaptive_pzptEnu_qoq3_job.yaml  EventRates_Adaptive_templateq0q3.yaml  EventRates_Atmospherics.yaml  EventRates_Atmospherics_10000tester.yaml  EventRates_Atmospherics_null_emu.yaml  EventRates_Atmospherics_null_etau.yaml  EventRates_Atmospherics_null_mutau.yaml  EventRates_Beam.yaml  EventRates_Beam_MO.yaml  EventRates_Beam_NDGAr.yaml  EventRates_Beam_NDGAr_q0q3.yaml  EventRates_Beam_ND_MicroProdN4p1.yaml  FitterConfig_PDSP.yaml  NewFit_13Jan2026.yaml  NewFit_Config_19thDec.yaml  NewFit_Config_25Dec.yaml  NewFit_Jan2026.yaml  NewFit_Jan2026_afteradaptive.yaml  PDSPDiagConfig.yaml  Posterior_chain.yaml  RunConfig.yaml  Variations_Atmospherics.yaml
Docs/: BINNING_USAGE.txt  COMPLETE_GUIDE.txt  CUTS_USAGE.txt  Doxyfile  VARS_USAGE.txt
Parameters/: ParameterHandlerRegularised.h
PreMadeConfigs/: ExampleSample.yaml  ExampleSystematic.yaml  RunConfig.yaml  SampleConfig.yaml  SystematicConfig.yaml
Samples/: CAFIncludes.h  CMakeLists.txt  Cut.h  Cuts.h  DUNEUtils.h  MaCh3DUNEFactory.cpp  MaCh3DUNEFactory.h  SampleHandlerAtm.cpp  SampleHandlerAtm.h  SampleHandlerBeamFD.cpp  SampleHandlerBeamFD.h  SampleHandlerBeamND.cpp  SampleHandlerBeamND.h  SampleHandlerBeamNDGAr.cpp  SampleHandlerBeamNDGAr.h  SampleHandlerBeamNDGar.cpp  SampleHandlerBeamNDGar.h  SampleHandlerBeamOffAxis.cpp  SampleHandlerBeamOffAxis.h  SampleHandlerPDSP.cpp  SampleHandlerPDSP.h  StructsDUNE.h  StructsPDSP.h  Var.h  Vars.h
Samples/BeamOffAxis/: CMakeLists.txt  EventInfo.h  Projections.h  README.md  ReadEvents.cpp  ReadEvents.h  Systematics.cpp  Systematics.h  Utility.cpp  Utility.h
Samples/BeamOffAxis/scripts/: gen_template_param_yml.py
Scripts/: MakeOscBinning.C  PlotErrorBands.C  PlotSigmaVariations.C  PriorPosteriorPredictivesDUNE.C  acceptanceUncertainty.C  badfracmetric.C  compare_llh_scans_2.py  convert_yaml.py  debu.txt  geom_correction_plots.C  link_files.sh  make2DHistRatio.C  makeAcceptanceCorrectionPlots.C  (+8 more)
Splines/: BinnedSplineHandlerDUNE.cpp  BinnedSplineHandlerDUNE.h  CMakeLists.txt  GenericSplineHandlerDUNE.cpp  GenericSplineHandlerDUNE.h  MonolithSplineHandlerDUNE.cpp  MonolithSplineHandlerDUNE.h  SplineHandlerFactoryDUNE.cpp  SplineHandlerFactoryDUNE.h
Systematics/Flux/: CMakeLists.txt  FluxParameters_FD_and_PRISM.yaml  OffAxisFluxUncertaintyHelper.cxx  OffAxisFluxUncertaintyHelper.h  README.md  combine.C  emit_flux_yaml.py  plot_flux_sigvar.py  test_read_flux_systs.C
samplePDFDUNE/: CMakeLists.txt  MaCh3DUNEFactory.cpp  MaCh3DUNEFactory.h  StructsDUNE.h  samplePDFDUNEAtm.cpp  samplePDFDUNEAtm.h  samplePDFDUNEBeamFD.cpp  samplePDFDUNEBeamFD.h  samplePDFDUNEBeamFD_actuallyFD.cpp  samplePDFDUNEBeamFD_actuallyFD.h  samplePDFDUNEBeamFD_actuallyFDdold.h  samplePDFDUNEBeamFD_actuallyFDold.cpp  samplePDFDUNEBeamFD_original.cpp  samplePDFDUNEBeamFDtest.cpp  samplePDFDUNEBeamFDtest.h  samplePDFDUNEBeamND.cpp  samplePDFDUNEBeamND.h  samplePDFDUNEBeamNDGAr.cpp  samplePDFDUNEBeamNDGAr.h  samplePDFDUNEBeamNDGar.cpp  samplePDFDUNEBeamNDGar.h
(+543 files in other folders)
